      Conary interfaces with non-file objects associated with
      standard input, output, or error could trace back. (CNY-1946)
    * The q --buildreqs option now functions when multiple build requirements 
      have the same name

  o Other Changes:
    * Conary tracebacks now report values for each variable in the
      local namespace in each frame. (CNY-1922)

Changes in 1.1.90:
  o Major Changes:
    * Label multiplicity, in which a trove on the same label
      appearing on multiple branches was understood as meaning that
      all the trove can be installed at once, is being generally
      deprecated.  Instead, a newer trove on a different branch that
      ends with the same label as an older trove will be considered
      together with and generally preferred to the older trove.
      Branch affinity, in which Conary keeps packages from the same
      branch during an update, is therefore replaced with label
      affinity, in which Conary keeps packages from the same label
      during an update.  Many of the individual changes in this
      version are parts of implementing this general change in
      behavior.

  o Client Changes:
    * Added getTroveLatestByLabel as a client-side call.
    * Label lookups pick the latest version which matches instead of
      the latest version on each branch.
    * Replaced branch affinity with label affinity.
    * getAllTroveLeavesByLabel() filters results by server names to
      eliminate spurious results from repositories which host multiple
      server names. (CNY-1771)
    * The cvc and conary commands now ignore broken pipes on standard
      output instead of producing a traceback. (CNY-1853)
    * Redirects follow the label of the branch they were built with
      instead of the branch itself.
    * Building redirects to a branch is now deprecated; redirects should
      point to labels instead. (CNY-1857)
    * The --replace-files option has been split into