@@ -376,12 +376,16 @@ class ResetableNetworkRepositoryServer(NetworkRepositoryServer):
 
 class HTTPServer(BaseHTTPServer.HTTPServer):
     def close_request(self, request):
-        while select.select([request], [], [], 0)[0]:
+        pollObj = select.poll()
+        pollObj.register(request, select.POLLIN)
+
+        while pollObj.poll(0):
             # drain any remaining data on this request
             # This avoids the problem seen with the keepalive code sending
             # extra bytes after all the request has been sent.
             if not request.recv(8096):
                 break
+
         BaseHTTPServer.HTTPServer.close_request(self, request)
 
 if SSL:
@@ -402,12 +406,7 @@ if SSL:
                 return
 
         def close_request(self, request):
-            while select.select([request], [], [], 0)[0]:
-                # drain any remaining data on this request
-                # This avoids the problem seen with the keepalive code sending
-                # extra bytes after all the request has been sent.
-                if not request.recv(8096):
-                    break
+            HTTPServer.close_request(self, request)
             request.set_shutdown(SSL.SSL_RECEIVED_SHUTDOWN |
                                  SSL.SSL_SENT_SHUTDOWN)
             HTTPServer.close_request(self, request)
